# app/login.go
@@ -11,15 +11,15 @@ import (
 // Login is used to get the access and refresh token for a user's credentials
 // @Summary     Login to api.wordbubble.io
 // @Description Login to api.wordbubble.io using the user credentials
-// @Tags        Auth
+// @Tags        auth
 // @Accept      json
 // @Produce     json
-// @Param       User body     model.LoginUser true "Credentials used to authenticate a user"
-// @Success     200  {object} resp.AuthenticatedResponse		"Valid access and refresh tokens for user"
-// @Failure     405  {object} resp.StatusMethodNotAllowed     	"resp.ErrInvalidHttpMethod"
-// @Failure     400  {object} resp.StatusBadRequest             "resp.ErrParseUser, resp.ErrUnknownUser, resp.ErrCouldNotDetermineUserType"
-// @Failure     401  {object} resp.StatusUnauthorized           "resp.ErrInvalidCredentials"
-// @Failure     500  {object} resp.StatusInternalServerError 	"resp.ErrSQLMappingError, resp.ErrCouldNotStoreRefreshToken"
+// @Param       User body     model.LoginUser                true "Credentials used to authenticate a user"
+// @Success     200  {object} resp.TokenResponse             "Valid access and refresh tokens for user"
+// @Failure     405  {object} resp.StatusMethodNotAllowed    "resp.ErrInvalidHttpMethod"
+// @Failure     400  {object} resp.StatusBadRequest          "resp.ErrParseUser, resp.ErrUnknownUser, resp.ErrCouldNotDetermineUserType"
+// @Failure     401  {object} resp.StatusUnauthorized        "resp.ErrInvalidCredentials"
+// @Failure     500  {object} resp.StatusInternalServerError "resp.ErrSQLMappingError, resp.ErrCouldNotStoreRefreshToken"
 // @Router      /login [post]
 func (wb *app) Login(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPost {
@@ -45,7 +45,7 @@ func (wb *app) Login(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	resp := resp.AuthenticatedResponse{
+	resp := resp.TokenResponse{
 		RefreshToken: refreshToken,
 		AccessToken:  wb.auth.GenerateAccessToken(authenticatedUser.Id),
 	}
