# app/signup.go
@@ -12,14 +12,14 @@ import (
 // Signup is used to signup a new user
 // @Summary     Signup to api.wordbubble.io
 // @Description Signup to api.wordbubble.io using a unique email and username
-// @Tags        Auth
+// @Tags        auth
 // @Accept      json
 // @Produce     json
 // @Param       User body     model.SignupUser true "User information required to signup"
-// @Success     200  {object} 		string
-// @Failure     400  {object} 		resp.StatusBadRequest			"resp.ErrParseUser, resp.ErrEmailIsNotValid, resp.ErrEmailIsTooLong, resp.ErrUsernameIsTooLong, resp.ErrUsernameIsNotLongEnough, resp.ErrUsernameInvalidChars, resp.ErrUserWithUsernameAlreadyExists, resp.ErrUserWithEmailAlreadyExists, resp.ErrCouldNotDetermineUserExistence, InvalidPassword"
-// @Failure     405  {object} 		resp.StatusMethodNotAllowed		"resp.ErrInvalidHttpMethod"
-// @Failure     500  {object} 		resp.StatusInternalServerError	"resp.ErrCouldNotBeHashPassword, resp.ErrCouldNotAddUser, resp.ErrCouldNotStoreRefreshToken"
+// @Success     200  {object} resp.TokenResponse
+// @Failure     400  {object} resp.StatusBadRequest          "resp.ErrParseUser, resp.ErrEmailIsNotValid, resp.ErrEmailIsTooLong, resp.ErrUsernameIsTooLong, resp.ErrUsernameIsNotLongEnough, resp.ErrUsernameInvalidChars, resp.ErrUserWithUsernameAlreadyExists, resp.ErrUserWithEmailAlreadyExists, resp.ErrCouldNotDetermineUserExistence, InvalidPassword"
+// @Failure     405  {object} resp.StatusMethodNotAllowed    "resp.ErrInvalidHttpMethod"
+// @Failure     500  {object} resp.StatusInternalServerError "resp.ErrCouldNotBeHashPassword, resp.ErrCouldNotAddUser, resp.ErrCouldNotStoreRefreshToken"
 // @Router      /signup [post]
 func (wb *app) Signup(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPost {
@@ -49,10 +49,10 @@ func (wb *app) Signup(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	resp := struct {
-		RefreshToken string `json:"refresh_token"`
-		AccessToken  string `json:"access_token"`
-	}{refreshToken, wb.auth.GenerateAccessToken(user.Id)}
+	resp := &resp.TokenResponse{
+		RefreshToken: refreshToken,
+		AccessToken:  wb.auth.GenerateAccessToken(user.Id),
+	}
 	w.WriteHeader(http.StatusCreated)
 	json.NewEncoder(w).Encode(resp)
 }
