# docs/swagger.json
@@ -1,10 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "WordBubble REST API",
+        "description": "wordbubble REST API interacts with auth and wordbubble data",
+        "title": "wordbubble REST API",
         "contact": {
             "name": "Ben Chadwick",
-            "url": "https://github.com/bchadwic"
+            "url": "https://github.com/bchadwic",
+            "email": "benchadwick87@gmail.com"
         },
         "license": {
             "name": "Apache 2.0",
@@ -12,6 +14,7 @@
         },
         "version": "1.0"
     },
+    "host": "https://api.wordbubble.com",
     "basePath": "/v1",
     "paths": {
         "/login": {
@@ -24,7 +27,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Auth"
+                    "auth"
                 ],
                 "summary": "Login to api.wordbubble.io",
                 "parameters": [
@@ -42,7 +45,7 @@
                     "200": {
                         "description": "Valid access and refresh tokens for user",
                         "schema": {
-                            "$ref": "#/definitions/resp.AuthenticatedResponse"
+                            "$ref": "#/definitions/resp.TokenResponse"
                         }
                     },
                     "400": {
@@ -82,7 +85,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Wordbubble"
+                    "wordbubble"
                 ],
                 "summary": "Pop a wordbubble",
                 "parameters": [
@@ -98,13 +101,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Latest WordBubble for user passed",
+                        "description": "Latest Wordbubble for user passed",
                         "schema": {
-                            "$ref": "#/definitions/model.WordBubble"
+                            "$ref": "#/definitions/model.Wordbubble"
                         }
                     },
                     "201": {
-                        "description": "resp.ErrNoWordBubble",
+                        "description": "resp.ErrNoWordbubble",
                         "schema": {
                             "$ref": "#/definitions/resp.StatusNoContent"
                         }
@@ -151,17 +154,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Wordbubble"
+                    "wordbubble"
                 ],
                 "summary": "Push a wordbubble",
                 "parameters": [
                     {
-                        "description": "WordBubble containing the text to be stored",
-                        "name": "WordBubble",
+                        "description": "Wordbubble containing the text to be stored",
+                        "name": "Wordbubble",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.WordBubble"
+                            "$ref": "#/definitions/model.Wordbubble"
                         }
                     }
                 ],
@@ -169,11 +172,11 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/resp.PushResponse"
                         }
                     },
                     "400": {
-                        "description": "resp.ErrParseWordBubble, InvalidWordBubble",
+                        "description": "resp.ErrParseWordbubble, InvalidWordbubble",
                         "schema": {
                             "$ref": "#/definitions/resp.StatusBadRequest"
                         }
@@ -191,7 +194,7 @@
                         }
                     },
                     "409": {
-                        "description": "resp.ErrMaxAmountOfWordBubblesReached",
+                        "description": "resp.ErrMaxAmountOfWordbubblesReached",
                         "schema": {
                             "$ref": "#/definitions/resp.StatusConflict"
                         }
@@ -215,7 +218,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Auth"
+                    "auth"
                 ],
                 "summary": "Signup to api.wordbubble.io",
                 "parameters": [
@@ -233,7 +236,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/resp.TokenResponse"
                         }
                     },
                     "400": {
@@ -267,17 +270,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Auth"
+                    "auth"
                 ],
                 "summary": "Token to api.wordbubble.io",
                 "parameters": [
                     {
-                        "description": "User information required to signup",
-                        "name": "User",
+                        "description": "Valid refresh token to gain a new access token",
+                        "name": "Token",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.SignupUser"
+                            "$ref": "#/definitions/model.RefreshToken"
                         }
                     }
                 ],
@@ -285,13 +288,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/resp.TokenResponse"
                         }
                     },
                     "400": {
-                        "description": "resp.ErrParseUser, resp.ErrEmailIsNotValid, resp.ErrEmailIsTooLong, resp.ErrUsernameIsTooLong, resp.ErrUsernameIsNotLongEnough, resp.ErrUsernameInvalidChars, resp.ErrUserWithUsernameAlreadyExists, resp.ErrUserWithEmailAlreadyExists, resp.ErrCouldNotDetermineUserExistence, InvalidPassword",
+                        "description": "resp.ErrParseRefreshToken",
                         "schema": {
                             "$ref": "#/definitions/resp.StatusBadRequest"
+                        }
+                    },
+                    "401": {
+                        "description": "resp.ErrRefreshTokenIsExpired, resp.ErrCouldNotValidateRefreshToken",
+                        "schema": {
+                            "$ref": "#/definitions/resp.StatusUnauthorized"
                         }
                     },
                     "405": {
@@ -301,9 +310,9 @@
                         }
                     },
                     "500": {
-                        "description": "resp.ErrCouldNotBeHashPassword, resp.ErrCouldNotAddUser, resp.ErrCouldNotStoreRefreshToken",
+                        "description": "resp.ErrCouldNotStoreRefreshToken",
                         "schema": {
-                            "$ref": "#/definitions/resp.StatusInternalServerError"
+                            "$ref": "#/definitions/resp.StatusMethodNotAllowed"
                         }
                     }
                 }
@@ -335,6 +344,14 @@
                 }
             }
         },
+        "model.RefreshToken": {
+            "type": "object",
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
         "model.SignupUser": {
             "description": "SignupUser is the body sent to the /signup operation",
             "type": "object",
@@ -350,7 +367,7 @@
                 }
             }
         },
-        "model.WordBubble": {
+        "model.Wordbubble": {
             "type": "object",
             "properties": {
                 "text": {
@@ -359,16 +376,12 @@
                 }
             }
         },
-        "resp.AuthenticatedResponse": {
+        "resp.PushResponse": {
             "type": "object",
             "properties": {
-                "access_token": {
+                "text": {
                     "type": "string",
-                    "example": "xxx.yyy.zzz"
-                },
-                "refresh_token": {
-                    "type": "string",
-                    "example": "xxx.yyy.zzz"
+                    "example": "thank you!"
                 }
             }
         },
@@ -449,10 +462,24 @@
                     "example": "could not validate the refresh token, please login again"
                 }
             }
+        },
+        "resp.TokenResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string",
+                    "example": "xxx.yyy.zzz"
+                },
+                "refresh_token": {
+                    "type": "string",
+                    "example": "xxx.yyy.zzz"
+                }
+            }
         }
     },
     "securityDefinitions": {
         "ApiKeyAuth": {
+            "description": "JWT access token retrieved from using a refresh token, gathered from /signup, /login, or /token",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
